--- a/index.html
+++ b/index.html
@@ -6,7 +6,218 @@
   </head>
   <body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
 
+    <header class = "main-header">
+      <nav class = "navigation">
+        <h1 class="visually-hidden">Device</h1>
+        <img class="logo" src="#" alt="Логотип Device">
+        <ul class="navigation-list">
+          <li class="navigation-item">
+             <input type="text" id="search-nav" name="search-nav" placeholder="Поиск по сайту">
+             <button class="button-search" type="submit">Найти</button>
+          </li>
+          <li class="navigation-item">
+            <img class="login-image" src="#" alt="Знак входа">
+            <a class="navigation-link" href="login.html">Войти</a>
+          </li>
+          <li class="navigation-item">
+            <img class="compare-image" src="#" alt="Знак сравнить">
+            <a class="navigation-link" href="compare.html">Сравнить</a>
+          </li>
+          <li class="navigation-item">
+            <img class="shoppingcart-image" src="#" alt="Знак корзины">
+            <a class="navigation-link" href="shoppingcart.html">Корзина</a>
+          </li>
+        </ul>
+        <ul class="navigation-list">
+          <li class="navigation-item">
+            <b>Каталог товаров</b>
+            <button class="button-catalog" type="submit">+</button>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="delivery.html">Доставка</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="guarantees.html">Гарантии</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="Contacts.html">Контакты</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+
+
+    <main>
+      <section class = "Slider">
+        <img class="Slider-image" src="#" alt="Квадрокоптер">
+        <button class="slider-button slider-prev" type="button">
+          <span class="visually-hidden">Предыдущее фото</span>
+        </button>
+        <button class="slider-button slider-next" type="button">
+          <span class="visually-hidden">Следующее фото</span>
+        </button>
+        <ol class="slider-pagination">
+          <li class="slider-pagination-item">
+            <button class="slider-pagination-button slider-pagination-button-current" type="button">
+              <span class="visually-hidden">Квадрокоптер</span>
+            </button>
+            <h2 class = "slider-heading">Порхает как бабочка,жалит как пчела!</h2>
+            <p class = "slider-paragraph">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
+            <a class="slider-link" href="#">Подробнее</a>
+            <b class="slider-specifications">800 м</b><span class="slider-description">Дальность полета</span>
+            <b class="slider-specifications">50 м</b><span class="slider-description">Радиус поражения</span>
+          </li>
+          <li class="slider-pagination-item">
+            <button class="slider-pagination-button" type="button">
+              <span class="visually-hidden">Смарт-часы</span>
+            </button>
+            <h2 class = "slider-heading">Худеем правильно!</h2>
+            <p class = "slider-paragraph">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
+            <a class="slider-link" href="#">Подробнее</a>
+            <b class="slider-specifications">48 часов</b><span class="slider-description">Без перезарядки</span>
+          </li>
+          <li class="slider-pagination-item">
+            <button class="slider-pagination-button" type="button">
+              <span class="visually-hidden">Палка для селфи</span>
+            </button>
+            <h2 class = "slider-heading">Делай селфи, как Бен Стиллер! </h2>
+            <p class = "slider-paragraph">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 кг.</p>
+            <a class="slider-link" href="#">Подробнее</a>
+            <b class="slider-specifications">8,5 м</b><span class="slider-description">Длина палки</span>
+            <b class="slider-specifications">5 кг</b><span class="slider-description">Вес палки</span>
+            <b class="slider-specifications">Карбон</b><span class="slider-description">Материал</span>
+          </li>
+        </ol>
+      </section>
+      <section class = "catalog-categories">
+        <h2 class="visually-hidden">Список категорий каталога</h2>
+        <ul class="catalog-list">
+          <li class="catalog-item">
+            <img class="catalog-images" src="#" alt="">
+            <b class="catalog-name">Виртуальная реальность</b>
+          </li>
+          <li class="catalog-item">
+            <img class="catalog-images" src="#" alt="">
+            <b class="catalog-name">Моноподы для селфи</b>
+          </li>
+          <li class="catalog-item">
+            <img class="catalog-images" src="#" alt="">
+            <b class="catalog-name">Экшн-камеры</b>
+          </li>
+          <li class="catalog-item">
+            <img class="catalog-images" src="#" alt="">
+            <b class="catalog-name">Фитнес-браслеты</b>
+          </li>
+          <li class="catalog-item">
+            <img class="catalog-images" src="#" alt="">
+            <b class="catalog-name">Умные часы</b>
+          </li>
+          <li class="catalog-item">
+            <img class="catalog-images" src="#" alt="">
+            <b class="catalog-name">Квадрокоптеры</b>
+          </li>
+        </ul>
+      </section>
+      <section class = "services">
+        <ul class="services-list">
+          <li>
+            <button class="button-services" type="submit">Доставка</button>
+            <h2 class="services-heading">Доставка</h2>
+            <p class="services-paragraph">Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
+            <img class="services-images" src="#" alt="">
+          </li>
+          <li>
+            <button class="button-services" type="submit">Гарантия</button>
+            <h2 class="services-heading">Гарантия</h2>
+            <p class="services-paragraph">Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам новый. Товар, не дом, конечно же.</p>
+            <img class="services-images" src="#" alt="">
+          </li>
+          <li>
+            <button class="button-services" type="submit">Кредит</button>
+            <h2 class="services-heading">Кредит</h2>
+            <p class="services-paragraph">Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для банка, разумеется.</p>
+            <img class="services-images" src="#" alt="">
+          </li>
+        </ul>
+      </section>
+      <section class = "delivery">
+        <h2 class="visually-hidden">Доставка товара</h2>
+        <a class="delivery-link" href="#">
+          <img class="delivery-images" src="#" alt="Доставка">
+          <b class = "delivery-text">ДОСТАВИМ РЕДКИЙ ТОВАР ПОД ЗАКАЗ</b>
+          <span class="delivery-info">i</span>
+        </a>
+      </section>
+      <section class = "contact-information">
+        <h2 class="contact-heading">О нас</h2>
+        <p class="contact-paragraph">Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
+        <p class="contact-paragraph">Мы можем доставить ваш товар в самые отдалённые уголки России транспортными компаниями:</p>
+        <ul class="contact-list">
+          <li class="contact-list-item">Меловые линии</li>
+          <li class="contact-list-item">СДИК</li>
+          <li class="contact-list-item">ТоксБерри</li>
+        </ul>
+        <a class="contact-button" href="#">Подробнее о нас</a>
+        <h2 class="contact-heading">Контакты</h2>
+        <p class="contact-paragraph">Вы можете забрать товар сами, заехав в наш офис. Заодно сможете проверить работоспособность покупки. </p>
+        <b class="contact-text">Интернет-магазин «Девайс»</b>
+        <p class="contact-paragraph">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p><u>+7 (812) 812-12-12</u>
+        <b class="contact-text">Время работы</b>
+        <span>пн—пт: с 10:00 до 22:00</span>
+        <span>сб—вс: с 10:00 до 19:00</span>
+        <a class="contact-button" href="#">Напишите нам</a>
+      </section>
+      <section class = "distribution">
+        <h2 class="distribution-heading">Подпишитесь на рассылку</h2>
+        <p class="distribution-paragraph">Еженедельный дайджест с обзорами новинок, длительными тест-драйвами, распаковками, а также акции, спецпредложения и вот это вот всё.</p>
+        <input type="email" id="email-distribution" name="email-distribution" placeholder="Ваш e-mail">
+        <button class="button-distribution" type="submit">Подписаться</button>
+        <img class="distribution-images" src="#" alt=""><span>Это бесплатно</span>
+      </section>
+    </main>
+
+
+    <footer>
+      <section class="footer-contacts">
+        <h2 class="visually-hidden">Контакты</h2>
+        <img class="logo-footer" src="#" alt="Логотип Device">
+        <address class="footer-contacts-address">
+          <p class="about-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
+        </address>
+      </section>
+      <section class="footer-links">
+        <h2 class="visually-hidden">Ссылки</h2>
+        <ul class="footer-services-list">
+          <li class="footer-services-list-item">
+            <a class="footer-services-links" href="#">Доставка</a>
+          </li>
+          <li class="footer-services-list-item">
+            <a class="footer-services-links" href="#">Гарантия</a>
+          </li>
+          <li class="footer-services-list-item">
+            <a class="footer-services-links" href="#">Контакты</a>
+          </li>
+        </ul>
+        <ul class="footer-social-network-list">
+          <li class="footer-social-network-list-item">
+            <img class="footer-social-network-images" src="#" alt="Ссылка на группу в Вконтакте">
+          </li>
+          <li class="footer-social-network-list-item">
+            <img class="footer-social-network-images" src="#" alt="Ссылка на группу в Instagram">
+          </li>
+          <li class="footer-social-network-list-item">
+            <img class="footer-social-network-images" src="#" alt="Ссылка на группу в Tvitter">
+          </li>
+        </ul>
+      </section>
+      <section class="footer-contacts">
+        <h2 class="visually-hidden">Контакты</h2>
+        <address class="footer-contacts-address">
+          <a class="footer-contacts-address-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+        </address>
+        <img class="footer-image" src="#" alt="Логотип html academy">
+      </section>
+    </footer>
   </body>
 </html>
