Доработка главной страницы и каталога v2

--- a/catalog.html
+++ b/catalog.html
@@ -129,14 +129,18 @@
         <select class="select-control" aria-label="Сортировка:">
           <option value="popular">Популярные</option>
         </select>
-        <div class="button-updown">
-          <a class="button" href="#" >
-            <span class="visually-hidden">Вверх</span>
-          </a>
-          <a class="button" href="#">
-            <span class="visually-hidden">Вниз</span>
-          </a>
-        </div>
+        <ul class="button-updown">
+          <li class="updown-item">
+            <a class="button" href="#" >
+              <span class="visually-hidden">Вверх</span>
+            </a>
+          </li>
+          <li class="updown-item">
+            <a class="button" href="#">
+              <span class="visually-hidden">Вниз</span>
+            </a>
+          </li>
+        </ul>
         <ul class="product-list">
           <li class="product-card">
             <a class="product-card-link" href="product.html">
@@ -200,17 +204,15 @@
 
 
     <footer>
-      <section class="footer-contacts">
-        <h2 class="visually-hidden">Контакты</h2>
+      <div class="footer-contacts">
         <a class="logo-footer-link" href = "#">
           <img class="logo-footer" src="#" alt="Логотип Device">
         </a>
         <address class="footer-contacts-address">
           <p class="about-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
         </address>
-      </section>
-      <section class="footer-links">
-        <h2 class="visually-hidden">Ссылки</h2>
+      </div>
+      <div class="footer-links">
         <ul class="footer-services-list">
           <li class="footer-services-list-item">
             <a class="footer-services-links" href="#">Доставка</a>
@@ -239,16 +241,15 @@
             </a>
           </li>
         </ul>
-      </section>
-      <section class="footer-contacts">
-        <h2 class="visually-hidden">Контакты</h2>
+      </div>
+      <div class="footer-contacts">
         <address class="footer-contacts-address">
           <a class="footer-contacts-address-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
         </address>
         <a class="logo-html-academy" href = "#">
           <img class="footer-image" src="#" alt="Логотип html academy">
         </a>
-      </section>
+      </div>
     </footer>
 
 
