--- a/catalog.html
+++ b/catalog.html
@@ -10,26 +10,27 @@
     <header class="main-header">
       <nav class="navigation">
         <h1 class="visually-hidden">Device</h1>
-        <a class="logo-link" href = "index.html">
-        <img class="logo" src="#" alt="Логотип Device">
+        <a class="logo-link" href = "#">
+        <img class="logo" src="images/Logotip.svg" alt="Логотип Device">
         </a>
         <ul class="navigation-list">
           <li class="navigation-item">
             <form class="search-form" action="https://echo.htmlacademy.ru/" method="post">
+              <img class="search-image" src="images/search-icon.svg" width="16px" height="16px" alt="Знак поиска">
              <input type="text" id="search-nav" name="search-nav" placeholder="Поиск по сайту">
              <button class="button-search" type="submit">Найти</button>
              </form>
           </li>
           <li class="navigation-item">
-            <img class="login-image" src="#" alt="Знак входа">
+            <img class="login-image" src="images/login-icon.svg" width="13px" height="12px" alt="Знак входа">
             <a class="navigation-link" href="login.html">Войти</a>
           </li>
           <li class="navigation-item">
-            <img class="compare-image" src="#" alt="Знак сравнить">
+            <img class="compare-image" src="images/compare-icon.svg" width="10px" height="12px" alt="Знак сравнить">
             <a class="navigation-link" href="compare.html">Сравнить</a>
           </li>
           <li class="navigation-item">
-            <img class="shoppingcart-image" src="#" alt="Знак корзины">
+            <img class="shoppingcart-image" src="images/drop-icon.svg" width="16px" height="14px" alt="Знак корзины">
             <a class="navigation-link" href="shoppingcart.html">Корзина</a>
           </li>
         </ul>
@@ -144,28 +145,28 @@
         <ul class="product-list">
           <li class="product-card">
             <a class="product-card-link" href="product.html">
-              <img class="product-card-image" src="#" alt="">
+              <img class="product-card-image" src="images/catalog/self1-catalog.jpg" width="360px" height="380px" alt="">
               <h3 class="product-card-title">Любительская селфи-палка</h3>
               <b class="product-card-price">500 ₽</b>
             </a>
           </li>
           <li class="product-card">
             <a class="product-card-link" href="product.html">
-              <img class="product-card-image" src="#" alt="">
+              <img class="product-card-image" src="images/catalog/self2-catalog.jpg" width="360px" height="380px" alt="">
               <h3 class="product-card-title">Профессиональная селфи-палка</h3>
               <b class="product-card-price">1500 ₽</b>
             </a>
           </li>
           <li class="product-card">
             <a class="product-card-link" href="product.html">
-              <img class="product-card-image" src="#" alt="">
+              <img class="product-card-image" src="images/catalog/self3-catalog.jpg" width="360px" height="380px" alt="">
               <h3 class="product-card-title">Непотопляемая селфи-палка</h3>
               <b class="product-card-price">2500 ₽</b>
             </a>
           </li>
           <li class="product-card">
             <a class="product-card-link" href="product.html">
-              <img class="product-card-image" src="#" alt="">
+              <img class="product-card-image" src="images/catalog/self4-catalog.jpg" width="360px" height="380px" alt="">
               <h3 class="product-card-title">Селфи-палка "Следуй за мной"</h3>
               <b class="product-card-price">1500 ₽</b>
             </a>
@@ -206,7 +207,7 @@
     <footer>
       <div class="footer-contacts">
         <a class="logo-footer-link" href = "#">
-          <img class="logo-footer" src="#" alt="Логотип Device">
+          <img class="logo-footer" src="images/footer-icon/yellow-logotip.svg" alt="Логотип Device">
         </a>
         <address class="footer-contacts-address">
           <p class="about-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
@@ -227,17 +228,17 @@
         <ul class="footer-social-network-list">
           <li class="footer-social-network-list-item">
             <a class="footer-social-network-link" href="#">
-              <img class="footer-social-network-images" src="#" alt="Ссылка на группу в Вконтакте">
+              <img class="footer-social-network-images" src="images/footer-icon/telegram.svg" alt="Ссылка на канал в Телеграм">
             </a>
           </li>
           <li class="footer-social-network-list-item">
             <a class="footer-social-network-link" href="#">
-              <img class="footer-social-network-images" src="#" alt="Ссылка на группу в Instagram">
+              <img class="footer-social-network-images" src="images/footer-icon/youtube.svg" lt="Ссылка на youtube-канал">
             </a>
           </li>
           <li class="footer-social-network-list-item">
             <a class="footer-social-network-link" href="#">
-              <img class="footer-social-network-images" src="#" alt="Ссылка на группу в Tvitter">
+              <img class="footer-social-network-images" src="images/footer-icon/twitter.svg" alt="Ссылка на группу в Tvitter">
             </a>
           </li>
         </ul>
@@ -247,11 +248,9 @@
           <a class="footer-contacts-address-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
         </address>
         <a class="logo-html-academy" href = "#">
-          <img class="footer-image" src="#" alt="Логотип html academy">
+          <img class="footer-image" src="images/footer-icon/logotip-academy.svg" width="114.9px" height="32.9px" alt="Логотип html academy">
         </a>
       </div>
     </footer>
-
-
   </body>
 </html>
