--- a/index.html
+++ b/index.html
@@ -11,25 +11,26 @@
       <nav class="navigation">
         <h1 class="visually-hidden">Device</h1>
         <a class="logo-link" href = "#">
-        <img class="logo" src="#" alt="Логотип Device">
+        <img class="logo" src="images/Logotip.svg" alt="Логотип Device">
         </a>
         <ul class="navigation-list">
           <li class="navigation-item">
             <form class="search-form" action="https://echo.htmlacademy.ru/" method="post">
+              <img class="search-image" src="images/search-icon.svg" width="16px" height="16px" alt="Знак поиска">
              <input type="text" id="search-nav" name="search-nav" placeholder="Поиск по сайту">
              <button class="button-search" type="submit">Найти</button>
              </form>
           </li>
           <li class="navigation-item">
-            <img class="login-image" src="#" alt="Знак входа">
+            <img class="login-image" src="images/login-icon.svg" width="13px" height="12px" alt="Знак входа">
             <a class="navigation-link" href="login.html">Войти</a>
           </li>
           <li class="navigation-item">
-            <img class="compare-image" src="#" alt="Знак сравнить">
+            <img class="compare-image" src="images/compare-icon.svg" width="10px" height="12px" alt="Знак сравнить">
             <a class="navigation-link" href="compare.html">Сравнить</a>
           </li>
           <li class="navigation-item">
-            <img class="shoppingcart-image" src="#" alt="Знак корзины">
+            <img class="shoppingcart-image" src="images/drop-icon.svg" width="16px" height="14px" alt="Знак корзины">
             <a class="navigation-link" href="shoppingcart.html">Корзина</a>
           </li>
         </ul>
@@ -80,7 +81,7 @@
         </ul>
         <ol class="slider-pagination">
           <li class="slider-pagination-item">
-            <img class="slider-image" src="#" alt="Квадрокоптер">
+            <img class="slider-image" src="images/slider/copter.png" width="560px" height="560px" alt="Квадрокоптер">
             <h2 class="slider-heading">Порхает как бабочка,жалит как пчела!</h2>
             <p class="slider-paragraph">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
             <a class="slider-link" href="#">Подробнее</a>
@@ -88,14 +89,14 @@
             <b class="slider-specifications">50 м</b><span class="slider-description">Радиус поражения</span>
           </li>
           <li class="slider-pagination-item">
-            <img class="slider-image" src="#" alt="Квадрокоптер">
+            <img class="slider-image" src="images/slider/smart-watch.png" width="560px" height="560px" alt="Фитнес-браслет">
             <h2 class="slider-heading">Худеем правильно!</h2>
             <p class="slider-paragraph">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
             <a class="slider-link" href="#">Подробнее</a>
             <b class="slider-specifications">48 часов</b><span class="slider-description">Без перезарядки</span>
           </li>
           <li class="slider-pagination-item">
-            <img class="slider-image" src="#" alt="Квадрокоптер">
+            <img class="slider-image" src="images/slider/self-stick.png" width="560px" height="560px" alt="Селфи-палка">
             <h2 class="slider-heading">Делай селфи, как Бен Стиллер! </h2>
             <p class="slider-paragraph">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 кг.</p>
             <a class="slider-link" href="#">Подробнее</a>
@@ -110,37 +111,37 @@
         <ul class="catalog-list">
           <li class="catalog-item">
             <a class="catalog-item-link" href="#">
-              <img class="catalog-images" src="#" alt="">
+              <img class="catalog-images" src="images/category-catalog/virtual-lins-icon.png" alt="">
               <b class="catalog-name">Виртуальная реальность</b>
             </a>
           </li>
           <li class="catalog-item">
             <a class="catalog-item-link" href="#">
-              <img class="catalog-images" src="#" alt="">
+              <img class="catalog-images" src="images/category-catalog/self-stick-icon.png" alt="">
               <b class="catalog-name">Моноподы для селфи</b>
             </a>
           </li>
           <li class="catalog-item">
             <a class="catalog-item-link" href="#">
-              <img class="catalog-images" src="#" alt="">
+              <img class="catalog-images" src="images/category-catalog/camera-icon.png" alt="">
               <b class="catalog-name">Экшн-камеры</b>
             </a>
           </li>
           <li class="catalog-item">
             <a class="catalog-item-link" href="#">
-              <img class="catalog-images" src="#" alt="">
+              <img class="catalog-images" src="images/category-catalog/fitnes-watch-icon.png" alt="">
               <b class="catalog-name">Фитнес-браслеты</b>
             </a>
           </li>
           <li class="catalog-item">
             <a class="catalog-item-link" href="#">
-              <img class="catalog-images" src="#" alt="">
+              <img class="catalog-images" src="images/category-catalog/smart-watch-icon.png" alt="">
               <b class="catalog-name">Умные часы</b>
             </a>
           </li>
           <li class="catalog-item">
             <a class="catalog-item-link" href="#">
-              <img class="catalog-images" src="#" alt="">
+              <img class="catalog-images" src="images/category-catalog/copter-icon.png" alt="">
               <b class="catalog-name">Квадрокоптеры</b>
             </a>
           </li>
@@ -152,26 +153,26 @@
             <button class="button-services" type="submit">Доставка</button>
             <h2 class="services-heading">Доставка</h2>
             <p class="services-paragraph">Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
-            <img class="services-images" src="#" alt="">
+            <img class="services-images" src="images/services/postman.svg" alt="">
           </li>
           <li>
             <button class="button-services" type="submit">Гарантия</button>
             <h2 class="services-heading">Гарантия</h2>
             <p class="services-paragraph">Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам новый. Товар, не дом, конечно же.</p>
-            <img class="services-images" src="#" alt="">
+            <img class="services-images" src="images/services/tools.svg" alt="">
           </li>
           <li>
             <button class="button-services" type="submit">Кредит</button>
             <h2 class="services-heading">Кредит</h2>
             <p class="services-paragraph">Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для банка, разумеется.</p>
-            <img class="services-images" src="#" alt="">
+            <img class="services-images" src="images/services/deliveryman.svg" alt="">
           </li>
         </ul>
       </section>
       <section class="delivery">
         <h2 class="visually-hidden">Доставка товара</h2>
         <a class="delivery-link" href="#">
-          <img class="delivery-images" src="#" alt="Доставка">
+          <img class="delivery-images" src="images/advanced-delivery/car.svg" width="125px" height="100px" alt="Доставка">
           <b class="delivery-text">ДОСТАВИМ РЕДКИЙ ТОВАР ПОД ЗАКАЗ</b>
           <span class="delivery-info">i</span>
         </a>
@@ -206,7 +207,7 @@
           <input type="email" id="email-distribution" name="email-distribution" placeholder="Ваш e-mail">
           <button class="button-distribution" type="submit">Подписаться</button>
         </form>
-        <img class="distribution-images" src="#" alt=""><span>Это бесплатно</span>
+        <img class="distribution-images" src="images/check-mark.svg" alt=""><span>Это бесплатно</span>
       </section>
     </main>
 
@@ -214,7 +215,7 @@
     <footer>
       <div class="footer-contacts">
         <a class="logo-footer-link" href = "#">
-          <img class="logo-footer" src="#" alt="Логотип Device">
+          <img class="logo-footer" src="images/footer-icon/yellow-logotip.svg" alt="Логотип Device">
         </a>
         <address class="footer-contacts-address">
           <p class="about-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
@@ -235,17 +236,17 @@
         <ul class="footer-social-network-list">
           <li class="footer-social-network-list-item">
             <a class="footer-social-network-link" href="#">
-              <img class="footer-social-network-images" src="#" alt="Ссылка на группу в Вконтакте">
+              <img class="footer-social-network-images" src="images/footer-icon/telegram.svg" alt="Ссылка на канал в Телеграм">
             </a>
           </li>
           <li class="footer-social-network-list-item">
             <a class="footer-social-network-link" href="#">
-              <img class="footer-social-network-images" src="#" alt="Ссылка на группу в Instagram">
+              <img class="footer-social-network-images" src="images/footer-icon/youtube.svg" alt="Ссылка на youtube-канал">
             </a>
           </li>
           <li class="footer-social-network-list-item">
             <a class="footer-social-network-link" href="#">
-              <img class="footer-social-network-images" src="#" alt="Ссылка на группу в Tvitter">
+              <img class="footer-social-network-images" src="images/footer-icon/twitter.svg" alt="Ссылка на группу в Tvitter">
             </a>
           </li>
         </ul>
@@ -255,7 +256,7 @@
           <a class="footer-contacts-address-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
         </address>
         <a class="logo-html-academy" href = "#">
-          <img class="footer-image" src="#" alt="Логотип html academy">
+          <img class="footer-image" src="images/footer-icon/logotip-academy.svg" alt="Логотип html academy">
         </a>
       </div>
     </footer>
