--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Девайс</title>
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
 
@@ -23,30 +24,30 @@
           </li>
           <li class="navigation-item">
             <img class="login-image" src="images/login-icon.svg" width="13px" height="12px" alt="Знак входа">
-            <a class="navigation-link" href="login.html">Войти</a>
+            <a class="navigation-link" href="#">Войти</a>
           </li>
           <li class="navigation-item">
             <img class="compare-image" src="images/compare-icon.svg" width="10px" height="12px" alt="Знак сравнить">
-            <a class="navigation-link" href="compare.html">Сравнить</a>
+            <a class="navigation-link" href="#">Сравнить</a>
           </li>
           <li class="navigation-item">
             <img class="shoppingcart-image" src="images/drop-icon.svg" width="16px" height="14px" alt="Знак корзины">
-            <a class="navigation-link" href="shoppingcart.html">Корзина</a>
+            <a class="navigation-link" href="#">Корзина</a>
           </li>
         </ul>
         <ul class="navigation-list">
           <li class="navigation-item">
-            <b>Каталог товаров</b>
-            <button class="button-catalog" type="button">+</button>
+            <a class="navigation-services" href="#">Каталог товаров</a>
+            <span>+</span>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="delivery.html">Доставка</a>
+            <a class="navigation-services" href="#">Доставка</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="guarantees.html">Гарантии</a>
+            <a class="navigation-services" href="#">Гарантии</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="Contacts.html">Контакты</a>
+            <a class="navigation-services" href="#">Контакты</a>
           </li>
         </ul>
       </nav>
@@ -204,7 +205,7 @@
     </main>
 
 
-    <footer>
+    <footer class="page-footer">
       <div class="footer-contacts">
         <a class="logo-footer-link" href = "#">
           <img class="logo-footer" src="images/footer-icon/yellow-logotip.svg" alt="Логотип Device">
@@ -233,7 +234,7 @@
           </li>
           <li class="footer-social-network-list-item">
             <a class="footer-social-network-link" href="#">
-              <img class="footer-social-network-images" src="images/footer-icon/youtube.svg" lt="Ссылка на youtube-канал">
+              <img class="footer-social-network-images" src="images/footer-icon/youtube.svg" alt="Ссылка на youtube-канал">
             </a>
           </li>
           <li class="footer-social-network-list-item">
@@ -248,7 +249,7 @@
           <a class="footer-contacts-address-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
         </address>
         <a class="logo-html-academy" href = "#">
-          <img class="footer-image" src="images/footer-icon/logotip-academy.svg" width="114.9px" height="32.9px" alt="Логотип html academy">
+          <img class="footer-image" src="images/footer-icon/logotip-academy.svg" alt="Логотип html academy">
         </a>
       </div>
     </footer>
