Доработка графики и стилизация для страницы catalog.html

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
           <input type="email" id="email-distribution" name="email-distribution" placeholder="Ваш e-mail">
           <button class="button-distribution" type="submit">Подписаться</button>
         </form>
-        <img class="distribution-images" src="images/check-mark.svg" alt=""><span class="distribution-info">Это бесплатно</span>
+        <img class="distribution-images" src="#" alt=""><span class="distribution-info">Это бесплатно</span>
       </section>
     </main>
 
