--- a/catalog.html
+++ b/catalog.html
@@ -12,26 +12,26 @@
       <nav class="navigation">
         <h1 class="visually-hidden">Device</h1>
         <a class="logo-link" href = "#">
-        <img class="logo" src="images/Logotip.svg" alt="Логотип Device">
+        <img class="logo" src="#" alt="Логотип Device">
         </a>
         <ul class="navigation-list">
           <li class="navigation-item">
             <form class="search-form" action="https://echo.htmlacademy.ru/" method="post">
-              <img class="search-image" src="images/search-icon.svg" width="16px" height="16px" alt="Знак поиска">
+              <img class="search-image" src="#" width="16px" height="16px" alt="Знак поиска">
              <input type="text" id="search-nav" name="search-nav" placeholder="Поиск по сайту">
              <button class="button-search" type="submit">Найти</button>
              </form>
           </li>
           <li class="navigation-item">
-            <img class="login-image" src="images/login-icon.svg" width="13px" height="12px" alt="Знак входа">
+            <img class="login-image" src="#" width="13px" height="12px" alt="Знак входа">
             <a class="navigation-link" href="#">Войти</a>
           </li>
           <li class="navigation-item">
-            <img class="compare-image" src="images/compare-icon.svg" width="10px" height="12px" alt="Знак сравнить">
+            <img class="compare-image" src="#" width="10px" height="12px" alt="Знак сравнить">
             <a class="navigation-link" href="#">Сравнить</a>
           </li>
           <li class="navigation-item">
-            <img class="shoppingcart-image" src="images/drop-icon.svg" width="16px" height="14px" alt="Знак корзины">
+            <img class="shoppingcart-image" src="#" width="16px" height="14px" alt="Знак корзины">
             <a class="navigation-link" href="#">Корзина</a>
           </li>
         </ul>
@@ -125,7 +125,7 @@
               </li>
             </ul>
           </fieldset>
-          <button class="button" type="submit">Показать</button>
+          <button class="button-vision" type="submit">Показать</button>
         </form>
         <h2 class="catalog-title">Сортировка:</h2>
         <select class="select-control" aria-label="Сортировка:">
@@ -173,7 +173,7 @@
             </a>
           </li>
         </ul>
-        <button class="button pagination-show-more" type="button">Загрузить ещё</button>
+        <button class="pagination-show-more" type="button">Загрузить ещё</button>
         <ul class="pagination">
           <li class="pagination-item">
             <a class="pagination-link pagination-prev pagination-disabled">
@@ -181,19 +181,19 @@
             </a>
           </li>
           <li class="pagination-item">
-            <a class="pagination-link pagination-current">1</a>
+            <a class="pagination-link-number pagination-current">1</a>
           </li>
           <li class="pagination-item">
-            <a class="pagination-link" href="#">2</a>
+            <a class="pagination-link-number" href="#">2</a>
           </li>
           <li class="pagination-item">
-            <a class="pagination-link" href="#">3</a>
+            <a class="pagination-link-number" href="#">3</a>
           </li>
           <li class="pagination-item">
-            <a class="pagination-link" href="#">...</a>
+            <a class="pagination-link-number" href="#">...</a>
           </li>
           <li class="pagination-item">
-            <a class="pagination-link" href="#">15</a>
+            <a class="pagination-link-number" href="#">15</a>
           </li>
           <li class="pagination-item">
             <a class="pagination-link pagination-next" href="#">
@@ -205,10 +205,10 @@
     </main>
 
 
-    <footer class="page-footer">
+    <footer class = "page-footer">
       <div class="footer-contacts">
         <a class="logo-footer-link" href = "#">
-          <img class="logo-footer" src="images/footer-icon/yellow-logotip.svg" alt="Логотип Device">
+          <img class="logo-footer" src="#" alt="Логотип Device">
         </a>
         <address class="footer-contacts-address">
           <p class="about-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
@@ -229,17 +229,17 @@
         <ul class="footer-social-network-list">
           <li class="footer-social-network-list-item">
             <a class="footer-social-network-link" href="#">
-              <img class="footer-social-network-images" src="images/footer-icon/telegram.svg" alt="Ссылка на канал в Телеграм">
+              <img class="footer-social-network-images" src="#" alt="Ссылка на канал в Телеграм">
             </a>
           </li>
           <li class="footer-social-network-list-item">
             <a class="footer-social-network-link" href="#">
-              <img class="footer-social-network-images" src="images/footer-icon/youtube.svg" alt="Ссылка на youtube-канал">
+              <img class="footer-social-network-images" src="#" alt="Ссылка на youtube-канал">
             </a>
           </li>
           <li class="footer-social-network-list-item">
             <a class="footer-social-network-link" href="#">
-              <img class="footer-social-network-images" src="images/footer-icon/twitter.svg" alt="Ссылка на группу в Tvitter">
+              <img class="footer-social-network-images" src="#" alt="Ссылка на группу в Tvitter">
             </a>
           </li>
         </ul>
@@ -249,7 +249,7 @@
           <a class="footer-contacts-address-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
         </address>
         <a class="logo-html-academy" href = "#">
-          <img class="footer-image" src="images/footer-icon/logotip-academy.svg" alt="Логотип html academy">
+          <img class="footer-image" src="#" alt="Логотип html academy">
         </a>
       </div>
     </footer>
