--- a/4/catalog.html
+++ b/4/catalog.html
@@ -13,26 +13,22 @@
       <nav class="navigation">
         <h1 class="visually-hidden">Device</h1>
         <a class="logo-link" href = "#">
-        <img class="logo" src="#" alt="Логотип Device">
+        <img class="logo" src="/images/logotip.svg" alt="Логотип Device">
         </a>
         <ul class="navigation-list">
           <li class="navigation-item">
             <form class="search-form" action="https://echo.htmlacademy.ru/" method="post">
-              <img class="search-image" src="#" width="16px" height="16px" alt="Знак поиска">
              <input type="text" id="search-nav" name="search-nav" placeholder="Поиск по сайту">
              <button class="button-search" type="submit">Найти</button>
              </form>
           </li>
           <li class="navigation-item">
-            <img class="login-image" src="#" width="13px" height="12px" alt="Знак входа">
             <a class="navigation-link" href="#">Войти</a>
           </li>
           <li class="navigation-item">
-            <img class="compare-image" src="#" width="10px" height="12px" alt="Знак сравнить">
             <a class="navigation-link" href="#">Сравнить</a>
           </li>
           <li class="navigation-item">
-            <img class="shoppingcart-image" src="#" width="16px" height="14px" alt="Знак корзины">
             <a class="navigation-link" href="#">Корзина</a>
           </li>
         </ul>
@@ -206,10 +202,11 @@
     </main>
 
 
+
     <footer class = "page-footer">
       <div class="footer-contacts">
         <a class="logo-footer-link" href = "#">
-          <img class="logo-footer" src="#" alt="Логотип Device">
+          <img class="logo-footer" src="images/footer-icon/yellow-logotip.svg" alt="Логотип Device">
         </a>
         <address class="footer-contacts-address">
           <p class="about-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
@@ -250,7 +247,7 @@
           <a class="footer-contacts-address-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
         </address>
         <a class="logo-html-academy" href = "#">
-          <img class="footer-image" src="#" alt="Логотип html academy">
+          <img class="footer-image" src="images/footer-icon/logotip-academy.svg" alt="Логотип html academy">
         </a>
       </div>
     </footer>
