--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 
 
     <header class="main-header">
-      <div class="header-container">
         <nav class="navigation">
           <h1 class="visually-hidden">Device</h1>
           <a class="logo-link" href = "#">
@@ -48,13 +47,12 @@
             </li>
           </ul>
         </nav>
-      </div>
     </header>
 
 
     <main class="main-index main-container">
-      <div class="page-container">
-          <section class="slider">
+        <section class="slider">
+          <div class="page-container">
             <button class="slider-button slider-prev" type="button">
               <span class="visually-hidden">Предыдущее фото</span>
             </button>
@@ -81,134 +79,164 @@
             <ol class="slider-pagination">
               <li class="slider-pagination-item">
                 <img class="slider-image" src="images/slider/copter.png" width="560px" height="560px" alt="Квадрокоптер">
-                <h2 class="slider-heading">Порхает как бабочка,жалит как пчела!</h2>
-                <p class="slider-paragraph">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
-                <a class="slider-link" href="#">Подробнее</a>
-                <b class="slider-specifications">800 м</b><span class="slider-description">Дальность полета</span>
-                <b class="slider-specifications">50 м</b><span class="slider-description">Радиус поражения</span>
+                <div>
+                  <h2 class="slider-heading">Порхает как бабочка,жалит как пчела!</h2>
+                  <p class="slider-paragraph">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
+                  <a class="slider-link" href="#">Подробнее</a>
+                  <b class="slider-specifications">800 м</b><span class="slider-description">Дальность полета</span>
+                  <b class="slider-specifications">50 м</b><span class="slider-description">Радиус поражения</span>
+                </div>
               </li>
               <li class="slider-pagination-item visually-hidden">
-                <img class="slider-image" src="images/slider/smart-watch.png" width="560px" height="560px" alt="Фитнес-браслет">
-                <h2 class="slider-heading">Худеем правильно!</h2>
-                <p class="slider-paragraph">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
-                <a class="slider-link" href="#">Подробнее</a>
-                <b class="slider-specifications">48 часов</b><span class="slider-description">Без перезарядки</span>
+                <div>
+                  <img class="slider-image" src="images/slider/smart-watch.png" width="560px" height="560px" alt="Фитнес-браслет">
+                  <h2 class="slider-heading">Худеем правильно!</h2>
+                  <p class="slider-paragraph">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
+                  <a class="slider-link" href="#">Подробнее</a>
+                  <b class="slider-specifications">48 часов</b><span class="slider-description">Без перезарядки</span>
+                </div>
               </li>
               <li class="slider-pagination-item visually-hidden">
-                <img class="slider-image" src="images/slider/self-stick.png" width="560px" height="560px" alt="Селфи-палка">
-                <h2 class="slider-heading">Делай селфи, как Бен Стиллер! </h2>
-                <p class="slider-paragraph">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 кг.</p>
-                <a class="slider-link" href="#">Подробнее</a>
-                <b class="slider-specifications">8,5 м</b><span class="slider-description">Длина палки</span>
-                <b class="slider-specifications">5 кг</b><span class="slider-description">Вес палки</span>
-                <b class="slider-specifications">Карбон</b><span class="slider-description">Материал</span>
+                <div>
+                  <img class="slider-image" src="images/slider/self-stick.png" width="560px" height="560px" alt="Селфи-палка">
+                  <h2 class="slider-heading">Делай селфи, как Бен Стиллер! </h2>
+                  <p class="slider-paragraph">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 кг.</p>
+                  <a class="slider-link" href="#">Подробнее</a>
+                  <b class="slider-specifications">8,5 м</b><span class="slider-description">Длина палки</span>
+                  <b class="slider-specifications">5 кг</b><span class="slider-description">Вес палки</span>
+                  <b class="slider-specifications">Карбон</b><span class="slider-description">Материал</span>
+                </div>
               </li>
             </ol>
-          </section>
+          </div>
+        </section>
         <section class="catalog-categories">
-          <h2 class="visually-hidden">Список категорий каталога</h2>
-          <ul class="catalog-list">
-            <li class="catalog-item">
-              <a class="catalog-item-link" href="#">
-                <img class="catalog-images" src="images/category-catalog/virtual-lins-icon.svg" alt="">
-                <b class="catalog-name">Виртуальная реальность</b>
-              </a>
-            </li>
-            <li class="catalog-item">
-              <a class="catalog-item-link" href="#">
-                <img class="catalog-images" src="images/category-catalog/self-stick-icon.svg" alt="">
-                <b class="catalog-name">Моноподы для селфи</b>
-              </a>
-            </li>
-            <li class="catalog-item">
-              <a class="catalog-item-link" href="#">
-                <img class="catalog-images" src="images/category-catalog/camera-icon.svg" alt="">
-                <b class="catalog-name">Экшн-камеры</b>
-              </a>
-            </li>
-            <li class="catalog-item">
-              <a class="catalog-item-link" href="#">
-                <img class="catalog-images" src="images/category-catalog/fitnes-watch-icon.svg" alt="">
-                <b class="catalog-name">Фитнес-браслеты</b>
-              </a>
-            </li>
-            <li class="catalog-item">
-              <a class="catalog-item-link" href="#">
-                <img class="catalog-images" src="images/category-catalog/smart-watch-icon.svg" alt="">
-                <b class="catalog-name">Умные часы</b>
-              </a>
-            </li>
-            <li class="catalog-item">
-              <a class="catalog-item-link" href="#">
-                <img class="catalog-images" src="images/category-catalog/copter-icon.svg" alt="">
-                <b class="catalog-name">Квадрокоптеры</b>
-              </a>
-            </li>
-          </ul>
+          <div class="page-container">
+            <h2 class="visually-hidden">Список категорий каталога</h2>
+            <ul class="catalog-list">
+              <li class="catalog-item">
+                <a class="catalog-item-link" href="#">
+                  <img class="catalog-images" src="images/category-catalog/virtual-lins-icon.svg" alt="">
+                  <b class="catalog-name">Виртуальная реальность</b>
+                </a>
+              </li>
+              <li class="catalog-item">
+                <a class="catalog-item-link" href="#">
+                  <img class="catalog-images" src="images/category-catalog/self-stick-icon.svg" alt="">
+                  <b class="catalog-name">Моноподы для селфи</b>
+                </a>
+              </li>
+              <li class="catalog-item">
+                <a class="catalog-item-link" href="#">
+                  <img class="catalog-images" src="images/category-catalog/camera-icon.svg" alt="">
+                  <b class="catalog-name">Экшн-камеры</b>
+                </a>
+              </li>
+              <li class="catalog-item">
+                <a class="catalog-item-link" href="#">
+                  <img class="catalog-images" src="images/category-catalog/fitnes-watch-icon.svg" alt="">
+                  <b class="catalog-name">Фитнес-браслеты</b>
+                </a>
+              </li>
+              <li class="catalog-item">
+                <a class="catalog-item-link" href="#">
+                  <img class="catalog-images" src="images/category-catalog/smart-watch-icon.svg" alt="">
+                  <b class="catalog-name">Умные часы</b>
+                </a>
+              </li>
+              <li class="catalog-item">
+                <a class="catalog-item-link" href="#">
+                  <img class="catalog-images" src="images/category-catalog/copter-icon.svg" alt="">
+                  <b class="catalog-name">Квадрокоптеры</b>
+                </a>
+              </li>
+            </ul>
+          </div>
         </section>
         <section class="services">
-          <ul class="services-list">
-            <li>
-              <button class="button-services" type="submit">Доставка</button>
-              <h2 class="services-heading">Доставка</h2>
-              <p class="services-paragraph">Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
-              <img class="services-images" src="images/services/postman.svg" alt="">
-            </li>
-            <li class="visually-hidden">
-              <button class="button-services " type="submit">Гарантия</button>
-              <h2 class="services-heading">Гарантия</h2>
-              <p class="services-paragraph">Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам новый. Товар, не дом, конечно же.</p>
-              <img class="services-images" src="images/services/tools.svg" alt="">
-            </li>
-            <li class="visually-hidden">
-              <button class="button-services" type="submit">Кредит</button>
-              <h2 class="services-heading">Кредит</h2>
-              <p class="services-paragraph">Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для банка, разумеется.</p>
-              <img class="services-images" src="images/services/deliveryman.svg" alt="">
-            </li>
-          </ul>
+          <div class="page-container-services">
+            <ul class="services-list-button">
+              <li class="list-button-item">
+                <button class="button-services" type="submit">Доставка</button>
+              </li>
+              <li class="list-button-item">
+                <button class="button-services " type="submit">Гарантия</button>
+              </li>
+              <li class="list-button-item">
+                <button class="button-services" type="submit">Кредит</button>
+              </li>
+            </ul>
+            <ul class="services-list">
+              <li >
+                <h2 class="services-heading">Доставка</h2>
+                <p class="services-paragraph">Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
+                <img class="services-images" src="images/services/postman.svg" alt="">
+              </li>
+              <li class="visually-hidden">
+                <h2 class="services-heading">Гарантия</h2>
+                <p class="services-paragraph">Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам новый. Товар, не дом, конечно же.</p>
+                <img class="services-images" src="images/services/tools.svg" alt="">
+              </li>
+              <li class="visually-hidden">
+                <h2 class="services-heading">Кредит</h2>
+                <p class="services-paragraph">Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для банка, разумеется.</p>
+                <img class="services-images" src="images/services/deliveryman.svg" alt="">
+              </li>
+            </ul>
+          </div>
         </section>
         <section class="delivery">
-          <h2 class="visually-hidden">Доставка товара</h2>
-          <a class="delivery-link" href="#">
-            <img class="delivery-images" src="images/advanced-delivery/car.svg" width="125px" height="100px" alt="Доставка">
-            <b class="delivery-text">ДОСТАВИМ РЕДКИЙ ТОВАР ПОД ЗАКАЗ</b>
-            <span class="delivery-info">i</span>
-          </a>
+          <div class="page-container-delivery">
+            <h2 class="visually-hidden">Доставка товара</h2>
+            <a class="delivery-link" href="#">
+              <img class="delivery-images" src="images/advanced-delivery/car.svg" width="125px" height="100px" alt="Доставка">
+              <p class="delivery-text">ДОСТАВИМ РЕДКИЙ ТОВАР ПОД ЗАКАЗ</p>
+              <span class="delivery-info">i</span>
+            </a>
+          </div>
         </section>
         <section class="contact-information">
-          <div class="contact-information-block">
-            <h2 class="contact-heading">О нас</h2>
-            <p class="contact-paragraph">Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
-            <p class="contact-paragraph">Мы можем доставить ваш товар в самые отдалённые уголки России транспортными компаниями:</p>
-            <ul class="contact-list">
-              <li class="contact-list-item">Меловые линии</li>
-              <li class="contact-list-item">СДИК</li>
-              <li class="contact-list-item">ТоксБерри</li>
-            </ul>
-            <a class="contact-button" href="#">Подробнее о нас</a>
-          </div>
-          <div class="contact-information-block">
-            <h2 class="contact-heading">Контакты</h2>
-            <p class="contact-paragraph">Вы можете забрать товар сами, заехав в наш офис. Заодно сможете проверить работоспособность покупки. </p>
-            <b class="contact-text">Интернет-магазин «Девайс»</b>
-            <p class="contact-paragraph">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p><u class="contact-phone">+7 (812) 812-12-12</u>
-            <b class="contact-text">Время работы</b>
-            <p class="contact-paragraph">пн—пт: с 10:00 до 22:00</p>
-            <p class="contact-paragraph">сб—вс: с 10:00 до 19:00</p>
-            <a class="contact-button" href="#">Напишите нам</a>
+          <div class="page-container-contact">
+            <div class="contact-information-block">
+              <h2 class="contact-heading">О нас</h2>
+              <p class="contact-paragraph">Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
+              <p class="contact-paragraph">Мы можем доставить ваш товар в самые отдалённые уголки России транспортными компаниями:</p>
+              <ul class="contact-list">
+                <li class="contact-list-item">Меловые линии</li>
+                <li class="contact-list-item">СДИК</li>
+                <li class="contact-list-item">ТоксБерри</li>
+              </ul>
+              <a class="contact-button" href="#">Подробнее о нас</a>
+            </div>
+            <div class="contact-information-block">
+              <h2 class="contact-heading">Контакты</h2>
+              <p class="contact-paragraph">Вы можете забрать товар сами, заехав в наш офис. Заодно сможете проверить работоспособность покупки. </p>
+              <b class="contact-text">Интернет-магазин «Девайс»</b>
+              <p class="contact-paragraph">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p><p class="contact-phone">+7 (812) 812-12-12</p>
+              <b class="contact-text">Время работы</b>
+              <p class="contact-paragraph">пн—пт: с 10:00 до 22:00</p>
+              <p class="contact-paragraph">сб—вс: с 10:00 до 19:00</p>
+              <a class="contact-button" href="#">Напишите нам</a>
+            </div>
           </div>
         </section>
         <section class="distribution">
-          <h2 class="distribution-heading">Подпишитесь на рассылку</h2>
-          <p class="distribution-paragraph">Еженедельный дайджест с обзорами новинок, длительными тест-драйвами, распаковками, а также акции, спецпредложения и вот это вот всё.</p>
-          <form class="distribution-form" action="https://echo.htmlacademy.ru/" method="post">
-            <input type="email" id="email-distribution" name="email-distribution" placeholder="Ваш e-mail">
-            <button class="button-distribution" type="submit">Подписаться</button>
-          </form>
-          <span class="distribution-info">Это бесплатно</span>
-        </section>
-      </div>
+          <div class="page-container">
+            <ul class="distribution-list">
+              <li class="distribution-list-item">
+                <h2 class="distribution-heading">Подпишитесь на рассылку</h2>
+              </li>
+              <li class="distribution-list-item">
+                <p class="distribution-paragraph">Еженедельный дайджест с обзорами новинок, длительными тест-драйвами, распаковками, а также акции, спецпредложения и вот это вот всё.</p>
+              </li>
+            </ul>
+            <form class="distribution-form" action="https://echo.htmlacademy.ru/" method="post">
+              <input type="email" id="email-distribution" name="email-distribution" placeholder="Ваш e-mail">
+              <button class="button-distribution" type="submit">Подписаться</button>
+              <span class="distribution-info">Это бесплатно</span>
+            </form>
+          </div>
+          </section>
     </main>
 
 
@@ -253,9 +281,7 @@
           </ul>
         </div>
         <div class="footer-contacts">
-          <address class="footer-contacts-address">
-            <a class="footer-contacts-address-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-          </address>
+          <a class="footer-contacts-address-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
           <a class="logo-html-academy" href = "#">
             <img class="footer-image" src="images/footer-icon/logotip-academy.svg" alt="Логотип html academy">
           </a>
